<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_orange_background"
    tools:context=".AllActivities.DashBoardActivity">


    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dashboard"
            android:textColor="@color/black"
            android:fontFamily="@font/logo"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/my_score_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_score"
            android:gravity="end"
            android:fontFamily="@font/logo"
            android:padding="16dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            />

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/simple_line"
        android:gravity="center"
        android:fontFamily="@font/logo"
        android:padding="16dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_above="@+id/recyclerView"
        android:textAllCaps="false"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/custom_grid_recycler_view" />


        <include
            android:id="@+id/learnFromYoutube"
            android:layout_below="@+id/recyclerView"
            layout="@layout/custom_grid_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/defaultFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    </RelativeLayout>


</RelativeLayout>