<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="50dp">


    <RelativeLayout
        android:id="@+id/question_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/question_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:text="What is 2 + 2 = ?"
            android:fontFamily="@font/logo"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:weightSum="4"
        android:layout_below="@+id/question_layout">

        <TextView
            android:id="@+id/answerOne"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle_background"
            android:text="25"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:gravity="center"
            android:fontFamily="@font/logo"
            />

        <TextView
            android:id="@+id/answerTwo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle_background"
            android:text="25"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:gravity="center"
            android:fontFamily="@font/logo"
            />

        <TextView
            android:id="@+id/answerThree"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle_background"
            android:text="25"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:gravity="center"
            android:fontFamily="@font/logo"
            />

        <TextView
            android:id="@+id/answerFour"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle_background"
            android:text="25"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:gravity="center"
            android:fontFamily="@font/logo"
            />


    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/customNextCardView"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearOne"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@null"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/customNextTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/logo"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/customSubmitCardView"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@null"
        app:cardElevation="4dp"
        app:cardCornerRadius="24dp"
        android:layout_below="@+id/customNextCardView"
        android:layout_centerInParent="true"
        app:cardUseCompatPadding="true"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/customSubmitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/logo"
            android:padding="15dp"
            android:textSize="16sp"
            android:text="@string/submit"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="@color/black"
            android:textAllCaps="false"/>


    </androidx.cardview.widget.CardView>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="3"
        android:stepSize="1"
        android:layout_centerInParent="true"
        android:isIndicator="true"
        android:layout_below="@+id/customSubmitCardView"
        android:progressTint="@color/yellow"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/gotoHomeCardView"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBar"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@null"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp"
        android:visibility="gone"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/gotoHomeTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/logo"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/gotohome"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>



</RelativeLayout>